# mullvadvpn-app

./: CHANGELOG.md  Cargo.toml  build_windows_modules.sh
.cargo/: config
android/src/main/kotlin/net/mullvad/mullvadvpn/ui/: SelectLocationFragment.kt
dist-assets/windows/: installer.nsh
docs/: security.md
mullvad-cli/src/: main.rs
mullvad-daemon/src/: lib.rs  main.rs  management_interface.rs  relays.rs  wireguard.rs
mullvad-jni/src/: lib.rs
mullvad-rpc/src/: event_loop.rs  lib.rs
talpid-core/src/firewall/: mod.rs
talpid-core/src/tunnel/wireguard/: mod.rs  wireguard_go.rs
test-rpcs/: Cargo.toml
test-rpcs/src/: main.rs
windows/driverlogic/: driverlogic.cpp  driverlogic.sln  driverlogic.vcxproj  driverlogic.vcxproj.filters
windows/nsis-plugins/src/driverlogic/: context.cpp  context.h  driverlogic.cpp  driverlogic.def  driverlogic.vcxproj
windows/winfw/src/winfw/rules/: permitlan.cpp  permitlanservice.cpp
windows/winnet/src/winnet/: converters.cpp
