[workspace]
members = [
    "mullvad-daemon",
    "mullvad-cli",
    "mullvad-problem-report",
    "mullvad-ipc-client",
    "mullvad-jni",
    "mullvad-paths",
    "mullvad-types",
    "mullvad-rpc",
    "mullvad-tests",
    "talpid-openvpn-plugin",
    "talpid-core",
    "talpid-ipc",
]
exclude = ["dist-assets/binaries/shadowsocks-rust"]

[replace]
"tokio-core:0.1.17" = { git = "https://github.com/mullvad/tokio-core", branch = "add-single-threaded-core" }
